# minijava

./: .b6353339-fae0-4c5f-83bf-66463a3bafc6.tag  .gitignore  CMakeLists.txt  README.md  build  config.h.in  doxygen.in  readme.md  run
benchmarks/macro/: CMakeLists.txt  Manifest.json  adjacent_block_comments.py  astgen.cpp  huge_random_file.cpp  long_id.py  many_different_ids.cpp  many_ids.py  simple.lex  simple.mj  single_repeated_id.py  syntaxgen.cpp
benchmarks/micro/: CMakeLists.txt  Manifest.json  character.cpp  keyword.cpp  lexer.cpp  parser.cpp  semantic.cpp  tts-combine.cpp  tts-lookup.cpp  tts-modify.cpp
src/: CMakeLists.txt  cli.cpp  cli.hpp  dummy.cpp  dummy.hpp  exceptions.cpp  exceptions.hpp  global.hpp  includes.hpp  minijava.cpp  minijava.dox  mj2c.cpp  sample.cpp  string.cpp  string.hpp  string_pool.cpp  string_pool.hpp  string_pool.tpp  symbol.cpp  symbol.hpp  symbol_anchor.cpp  symbol_anchor.hpp  symbol_base.tpp  symbol_entry.cpp  symbol_entry.hpp  symbol_entry.tpp  symbol_pool.hpp  symbol_pool.tpp
src/core/: CMakeLists.txt  cli.cpp  cli.hpp  exceptions.hpp  firm.hpp  global.cpp  global.hpp  position.cpp  position.hpp  source_error.cpp  source_error.hpp  symbol_entry.tpp  symbol_pool.cpp
src/core/asm/: allocate_registers.cpp  allocate_registers.hpp  allocator.cpp  allocator.hpp  asm.cpp  asm.hpp  assembly.cpp  assembly.hpp  basic_block.cpp  basic_block.hpp  data.cpp  data.hpp  firm_backend.cpp  firm_backend.hpp  generator.cpp  generator.hpp  instruction.cpp  instruction.hpp  instruction.tpp  macros.cpp  macros.hpp  opcode.cpp  output.cpp  output.hpp  register.cpp  register.hpp  register.tpp  text.cpp  text.hpp
src/core/firm/: builder.cpp  builder.hpp  builtins.cpp  builtins.hpp  firm.cpp  firm.hpp  lowering.cpp  lowering.hpp  mangle.cpp  mangle.hpp  method_builder.cpp  method_builder.hpp  singleton.cpp  singleton.hpp  type_builder.cpp  type_builder.hpp
src/core/io/: file_cleanup.cpp  file_cleanup.hpp  file_data.cpp  file_data.hpp  file_data.tpp  file_output.cpp  file_output.hpp  file_output.tpp  misc.cpp  misc.hpp
src/core/irg/: builtins.cpp  builtins.hpp  global_firm_state.cpp  global_firm_state.hpp  globals.cpp  globals.hpp  irg.cpp  irg.hpp  lowering.cpp  lowering.hpp  mangle.cpp  mangle.hpp  method_builder.cpp  method_builder.hpp  singleton.cpp  singleton.hpp  type_builder.cpp  type_builder.hpp
src/core/lexer/: character.cpp  character.hpp  character.tpp  keyword.cpp  keyword.hpp  keyword.tpp  lexer.cpp  lexer.hpp  lexer.tpp  position.cpp  position.hpp  serializer.tpp  token.hpp  token.tpp  token_iterator.tpp  token_type.cpp  token_type.hpp  token_type.tpp  token_type_set.cpp
src/core/meta/: meta.cpp  meta.hpp  meta_postamble.tpp  meta_preamble.tpp
src/core/opt/: algebraic_simplifier.cpp  algebraic_simplifier.hpp  conditional.cpp  conditional.hpp  control_flow.cpp  control_flow.hpp  folding.cpp  folding.hpp  gc.cpp  gc.hpp  inline.cpp  inline.hpp  load_store.cpp  load_store.hpp  lowering.cpp  lowering.hpp  opt.cpp  opt.hpp  ssa_helper.cpp  ssa_helper.hpp  tailrec.cpp  tailrec.hpp  unroll.cpp  unroll.hpp  unused_method.cpp  unused_method.hpp  unused_params.cpp  unused_params.hpp
src/core/parser/: ast.cpp  ast.hpp  ast.tpp  ast_factory.cpp  ast_factory.hpp  ast_factory.tpp  ast_misc.cpp  ast_misc.hpp  for_each_node.cpp  for_each_node.hpp  parser.cpp  parser.hpp  parser.tpp  pretty_printer.cpp  pretty_printer.hpp
src/core/runtime/: host_cc.cpp  host_cc.hpp  runtime.cpp  runtime.hpp
src/core/semantic/: analyze.cpp  analyze.hpp  analyze.tpp  attribute.cpp  attribute.hpp  attribute.tpp  buildins.cpp  buildins.hpp  builtins.cpp  builtins.hpp  constant.cpp  constant.hpp  dont_use_main_args.cpp  dont_use_main_args.hpp  name_type_analysis.cpp  name_type_analysis.hpp  ref_type_analysis.cpp  ref_type_analysis.hpp  semantic.cpp  semantic.hpp  semantic.tpp  semantic_error.cpp  semantic_error.hpp  semantic_type.cpp  semantic_type.hpp  std_definitions.cpp  std_definitions.hpp  symbol_def.cpp  symbol_def.hpp  symbol_table.cpp  symbol_table.hpp  symbol_table.tpp  symbol_type_analysis.cpp  symbol_type_analysis.hpp  thou_shalt_return.cpp  thou_shalt_return.hpp  type_info.cpp  type_info.hpp  type_system.cpp  type_system.hpp  (+2 more)
src/core/symbol/: symbol.cpp  symbol.hpp  symbol_anchor.cpp  symbol_base.tpp  symbol_entry.cpp  (+5 more)
src/lexer/: character.cpp  character.hpp  character.tpp  keyword.cpp  keyword.hpp  lexer.cpp  lexer.hpp  lexer.tpp  serializer.cpp  serializer.hpp  token.cpp  token.hpp  token.tpp  token_iterator.cpp  token_iterator.hpp  token_type.cpp  token_type.hpp  token_type.tpp  token_type_set.hpp  token_type_set.tpp
src/parser/: ast.cpp  ast.hpp  ast.tpp  operator.tpp  parser.cpp  parser.hpp  parser.tpp  pretty_printer.cpp  pretty_printer.hpp  serializer.cpp  serializer.hpp
src/runtime/: CMakeLists.txt  allocate.c  mj_runtime.c  println.c  runtime.h.in
src/support/: CMakeLists.txt
src/system/: rlimit_stack_posix.tpp  system.hpp
tests/: CMakeLists.txt  cli.cpp  dummy.cpp  exceptions.cpp  generator.cpp  global.cpp  string.cpp  string_pool.cpp  symbol.cpp  symbol_anchor.cpp  symbol_entry.cpp  symbol_pool.cpp  syntaxgen.cpp
tests/comp/: CMakeLists.txt  driver.py
tests/fuzz/: CMakeLists.txt  generic.cpp  parsetest.cpp  print-ast.cpp  sem-check.cpp
tests/io/: file_data.cpp
tests/lexer/: keyword.cpp  lexer.cpp  serializer.cpp  token.cpp  token_iterator.cpp  token_type.cpp  token_type_set.cpp
tests/parser/: ast.cpp  ast_factory.cpp  for_each_node.cpp  parser.cpp  pretty_printer.cpp  serializer.cpp  syntax_gen.cpp
tests/semantic/: buildins.cpp  ref_type_analysis.cpp  semantic_error.cpp  semantic_type.cpp  std_definitions.cpp  symbol_type_analysis.cpp  type_system.cpp
tests/stup-test-example/: stub-test.cpp
tests/symbol/: symbol.cpp  symbol_pool.cpp
tests/testaux/: CMakeLists.txt  benchmark.cpp  benchmark.hpp  benchmark.tpp  cx_string.hpp  random_tokens.tpp  static_symbol_pool.hpp  syntaxgen.tpp  temporary_file.cpp  temporary_file.hpp  testaux.hpp  token_string.hpp
tests/unit/: CMakeLists.txt  cli.cpp  position.cpp  source_error.cpp
(+410 files in other folders)
